--- a/index.html
+++ b/index.html
@@ -167,6 +167,11 @@
     <!-- About section -->
     <section id="about" class="about_wrapper">
         <div class="container">
+            <div class="row">
+                <div class="col-sm-12 section-title text-center mb-5">
+                    <h3>About Us</h3>
+                </div>
+            </div>
             <div class="row flex-lg-row flex-column-reverse ">
                 <div class="col-lg-6 text-center text-lg-start">
                     <h3>Welcome to <span>Dracc<br class="d-none d-lg-block">
@@ -192,7 +197,6 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12 section-title text-center mb-5">
-                    <h6>What I can do for you</h6>
                     <h3>Our Favorite Rooms</h3>
                 </div>
             </div>
@@ -202,11 +206,9 @@
                         <img src="./images/room/dracc20.png" class="img-fluid" alt="#">
                         <div class="room-item-wrap">
                             <div class="room-content">
-                                <h5 class="text-white mb-lg-5 text-decoration-underline">Royal Suit</h5>
-                                <p class="text-white">Discover five of our favourite dresses from our new collection
-                                    that
-                                    are destined to be worn and loved immediately</p>
-                                <p class="text-white fw-bold mt-lg-4">$220 / Per Night</p>
+                                <h5 class="text-white mb-lg-5 text-decoration-underline">Basic</h5>
+                                <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus corporis nesciunt a nihil,</p>
+                                <p class="text-white fw-bold mt-lg-4">#15,000 /Per Night</p>
                                 <a class="main-btn border-white text-white mt-lg-5" href="#">Book now</a>
                             </div>
                         </div>
@@ -217,11 +219,9 @@
                         <img src="./images/room/dracc5.png" class="img-fluid" alt="#">
                         <div class="room-item-wrap">
                             <div class="room-content">
-                                <h5 class="text-white mb-lg-5 text-decoration-underline">Royal Suit</h5>
-                                <p class="text-white">Discover five of our favourite dresses from our new collection
-                                    that
-                                    are destined to be worn and loved immediately</p>
-                                <p class="text-white fw-bold mt-lg-4">$220 / Per Night</p>
+                                <h5 class="text-white mb-lg-5 text-decoration-underline">classic</h5>
+                                <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus corporis nesciunt a nihil,</p>
+                                <p class="text-white fw-bold mt-lg-4">#20,000/ Per Night</p>
                                 <a class="main-btn border-white text-white mt-lg-5" href="#">Book now</a>
                             </div>
                         </div>
@@ -232,11 +232,9 @@
                         <img src="./images/room/dracc17.png" class="img-fluid" alt="#">
                         <div class="room-item-wrap">
                             <div class="room-content">
-                                <h5 class="text-white mb-lg-5 text-decoration-underline">Royal Suit</h5>
-                                <p class="text-white">Discover five of our favourite dresses from our new collection
-                                    that
-                                    are destined to be worn and loved immediately</p>
-                                <p class="text-white fw-bold mt-lg-4">$220 / Per Night</p>
+                                <h5 class="text-white mb-lg-5 text-decoration-underline">Advanced</h5>
+                                <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus corporis nesciunt a nihil,</p>
+                                <p class="text-white fw-bold mt-lg-4">#30,000/ Per Night</p>
                                 <a class="main-btn border-white text-white mt-lg-5" href="#">Book now</a>
                             </div>
                         </div>
@@ -264,10 +262,10 @@
                     <!--Service Area Start-->
                     <div class="tab-content" id="myTabContent">
                         <div class="tab-pane fade active show" id="spa" role="tabpanel">
-                            <img src="./images/services/service1.webp" alt="">
+                            <img src="./images/services/dracc10.png" alt="">
                         </div>
                         <div class="tab-pane fade" id="restaurent" role="tabpanel">
-                            <img src="./images/services/service2.webp" alt="">
+                            <img src="./images/services/dracc2 (1).png" alt="">
                         </div>
                         <div class="tab-pane fade" id="swimming" role="tabpanel">
                             <img src="images/services/dracc16 (2).png" alt="">
@@ -287,8 +285,8 @@
                                     <span class="service-icon">
                                         <img src="./images/services/service-icon1.webp" alt="">
                                     </span>
-                                    <h5>Spa, beauty & Health</h5>
-                                    <p><span>Spa and beauty </span>luptatem quia voluptas sit aspernatur aut odit aut
+                                    <h5>Accommodation</h5>
+                                    <p><span>cool and commfy </span>luptatem quia voluptas sit aspernatur aut odit aut
                                         fugit, sed quia </p>
                                 </a>
                             </li>
@@ -297,8 +295,8 @@
                                     <span class="service-icon">
                                         <img src="./images/services/service-icon2.webp" alt="">
                                     </span>
-                                    <h5>Restaurant</h5>
-                                    <p><span>Restaurant</span> lup provide grro tatem quia voluptas sit aspernatur aut
+                                    <h5>Hall</h5>
+                                    <p><span>Event hall</span> lup provide grro tatem quia voluptas sit aspernatur aut
                                         odit aut fugit, </p>
                                 </a>
                             </li>
@@ -307,8 +305,8 @@
                                     <span class="service-icon">
                                         <img src="./images/services/service-icon3.webp" alt="">
                                     </span>
-                                    <h5>Swimming Pool</h5>
-                                    <p><span>Swimming</span> pool luptatem quia voluptas sit aspernatur aut odit aut
+                                    <h5>Catering/laundry</h5>
+                                    <p><span>Catering</span> and laundry luptatem quia voluptas sit aspernatur aut odit aut
                                         fugit, sed quia </p>
                                 </a>
                             </li>
@@ -337,17 +335,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 section-title text-center mb-5">
-
-                    <h6>What I can do for you</h6>
-                    <h3>Our Special Staff</h3>
+                    <h3>Our Staff</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="card p-0 rounded-3">
-                        <img src="images/team/team1.webp" class="img-fluid rounded-3" alt="#" />
+                        <img src="images/team/staff1.png" class="img-fluid rounded-3" alt="#" />
                         <div class="team-info">
-                            <h5>Shirley Gibson</h5>
+                            <h5>Ndukwe Victor</h5>
                             <p>Manager</p>
                             <ul class="social-network">
                                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
@@ -360,10 +356,10 @@
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="card p-0 rounded-3">
-                        <img src="images/team/team2.webp" class="img-fluid rounded-3" alt="#" />
+                        <img src="images/team/staff2.png" class="img-fluid rounded-3" alt="#" />
                         <div class="team-info">
-                            <h5>Ronald Long</h5>
-                            <p>Chif Reciption Officer</p>
+                            <h5>RuhamaKamso</h5>
+                            <p>Chief Reception Officer</p>
                             <ul class="social-network">
                                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -375,9 +371,9 @@
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="card p-0 rounded-3">
-                        <img src="images/team/team3.webp" class="img-fluid rounded-3" alt="#" />
+                        <img src="images/team/staff4.png" class="img-fluid rounded-3" alt="#" />
                         <div class="team-info">
-                            <h5>Ashley Sanchez</h5>
+                            <h5>Vera Obasi</h5>
                             <p>Master Chef</p>
                             <ul class="social-network">
                                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
@@ -390,9 +386,9 @@
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="card p-0 rounded-3">
-                        <img src="images/team/team4.webp" class="img-fluid rounded-3" alt="#" />
+                        <img src="images/team/staff3.png" class="img-fluid rounded-3" alt="#" />
                         <div class="team-info">
-                            <h5>Jessica Watson</h5>
+                            <h5>Uche Ikem</h5>
                             <p>Housekeeping</p>
                             <ul class="social-network">
                                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
@@ -404,68 +400,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card p-0 rounded-3">
-                        <img src="images/team/team1.webp" class="img-fluid rounded-3" alt="#" />
-                        <div class="team-info">
-                            <h5>Shirley Gibson</h5>
-                            <p>Manager</p>
-                            <ul class="social-network">
-                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                                <li><a href="#"><i class="fab fa-vimeo-v"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card p-0 rounded-3">
-                        <img src="images/team/team2.webp" class="img-fluid rounded-3" alt="#" />
-                        <div class="team-info">
-                            <h5>Ronald Long</h5>
-                            <p>Chif Reciption Officer</p>
-                            <ul class="social-network">
-                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                                <li><a href="#"><i class="fab fa-vimeo-v"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card p-0 rounded-3">
-                        <img src="images/team/team3.webp" class="img-fluid rounded-3" alt="#" />
-                        <div class="team-info">
-                            <h5>Ashley Sanchez</h5>
-                            <p>Master Chef</p>
-                            <ul class="social-network">
-                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                                <li><a href="#"><i class="fab fa-vimeo-v"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card p-0 rounded-3">
-                        <img src="./images - Copy/dracc23.jpg" class="img-fluid rounded-3" alt="#" />
-                        <div class="team-info">
-                            <h5>Jessica Watson</h5>
-                            <p>Housekeeping</p>
-                            <ul class="social-network">
-                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                                <li><a href="#"><i class="fab fa-vimeo-v"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
+           
         </div>
 
     </section>
@@ -476,25 +411,24 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 section-title text-center mb-5">
-                    <h6>Best Pictures Of Our Hotel</h6>
                     <h3>Our Gallery</h3>
                 </div>
             </div>
             <div class="row g-0">
                 <div class="col-lg-3 col-md-6 gallery-item">
-                    <img src="./images/room/dracc5.png" class="img-fluid w-100" alt="#">
+                    <img src="./images/gallery/dracc15.png" class="img-fluid w-100" alt="#">
                     <div class="gallery-item-content"></div>
                 </div>
                 <div class="col-lg-3 col-md-6 gallery-item">
-                    <img src="./images - Copy/dracc2.jpg" class="img-fluid w-100" alt="#">
+                    <img src="./images/gallery/dracc21.png" class="img-fluid w-100" alt="#">
                     <div class="gallery-item"></div>
                 </div>
                 <div class="col-lg-3 col-md-6 gallery-item">
-                    <img src="./images/gallery/3.webp" class="img-fluid w-100" alt="#">
+                    <img src="./images/gallery/dracc7.png" class="img-fluid w-100" alt="#">
                     <div class="gallery-item-content"></div>
                 </div>
                 <div class="col-lg-3 col-md-6 gallery-item">
-                    <img src="./images/gallery/4.webp" class="img-fluid w-100" alt="#">
+                    <img src="./images/gallery/dracc9.png" class="img-fluid w-100" alt="#">
                     <div class="gallery-item-content"></div>
                 </div>
                 <div class="col-md-6 gallery-item">
@@ -504,6 +438,19 @@
                 <div class="col-md-6 gallery-item">
                     <img src="./imagecompressor/dracc11-min.jpg" class="img-fluid w-100" alt="#">
                     <div class="gallery-item-content"> </div>
+                </div>
+              
+                <div class="col-lg-4 col-md-6 gallery-item">
+                    <img src="./images/gallery/dracc21.png" class="img-fluid w-100" alt="#">
+                    <div class="gallery-item"></div>
+                </div>
+                <div class="col-lg-4 col-md-6 gallery-item">
+                    <img src="./images/gallery/dracc7.png" class="img-fluid w-100" alt="#">
+                    <div class="gallery-item-content"></div>
+                </div>
+                <div class="col-lg-4 col-md-6 gallery-item">
+                    <img src="./images/gallery/dracc9.png" class="img-fluid w-100" alt="#">
+                    <div class="gallery-item-content"></div>
                 </div>
             </div>
         </div>
@@ -665,19 +612,6 @@
         </div>
     </section>
     <!-- Pricing Section Exit  -->
-    <!--news letter-->
-
-    <section id="news-letter" class="section-p1 section-m1">
-        <div class="news-text">
-            <h4>Subscribe To Our Newsletters</h4>
-            <p>Get Weekly Updates About Our <span>Latest Promotions</span> </p>
-        </div>
-        <div class="form">
-            <input type="text" placeholder="put your email">
-            <button class="normal">Subscribe</button>
-        </div>
-    </section>
-
     <!-- Footer section -->
     <section id="contact" class="footer_wrapper mt-3 mt-md-0 pb-0">
         <div class="container pb-3">
@@ -734,7 +668,7 @@
             </div>
         </div>
         <div class="container-fluid copyright-section">
-            <p>Copyright <a href="#">Â© CODE4EDUCATION.</a> All Rights Reserved</p>
+            <p>Copyright <a href="#">Divine Love Retreat and Conference.</a> All Rights Reserved</p>
         </div>
     </section>
     <!--Footer section exit-->
